--- a/index.html
+++ b/index.html
@@ -344,6 +344,11 @@ knowledge of the Design.</p>
         <a href="https://www.linkedin.com/in/gabrielle-oliveira"><i class="fab fa-linkedin"></i></a>
         <a href="https://br.pinterest.com/gabimez/"><i class="fab fa-pinterest-square"></i></a>
       </div>
+       
+      <div id="text">
+      <p style="color:black;">2019 gabrielle oliveira</p>
+
+      </div>
     
 
 
