--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	  </nav>
     <!-- END nav -->
 		
-		<div class="hero-wrap js-fullheight" style="background-image: url('images/love3.jpg');">
+		<div class="hero-wrap js-fullheight" style="background-image: url('images/novo.jpg');">
 
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
