--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ knowledge of the Design.</p>
       </div>
        
       <div id="text">
-      <p style="color:black;">2019 gabrielle oliveira</p>
+      <p style="color:black;">2019 Gabrielle Oliveira Presentation.</p>
 
       </div>
     
